miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_no_derive.stderr
error[E0599]: no variant, associated function, or constant named `to_dataframe` found for enum `Status` in the current scope
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
 7 | enum Status {
   | ----------- variant, associated function, or constant `to_dataframe` not found for this enum
...
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ variant, associated function, or constant not found in `Status`
   |
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Status: miniextendr_api::dataframe::DataFrameRowConvert` is not satisfied
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:15:32
   |
15 |     Tracked { id: i32, status: Status },
   |                                ^^^^^^ unsatisfied trait bound
   |
help: the trait `miniextendr_api::dataframe::DataFrameRowConvert` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:7:1
   |
 7 | enum Status {
   | ^^^^^^^^^^^
help: the trait `miniextendr_api::dataframe::DataFrameRowConvert` is implemented for `Outer`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait `DataFrameRow` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:15:32
   |
15 |     Tracked { id: i32, status: Status },
   |                                ^^^^^^ add `#[derive(DataFrameRow)]` to `Status`, annotate the field with `#[dataframe(as_list)]` to keep it as an opaque list-column, or annotate with `#[dataframe(as_factor)]` for unit-only enums
   |
help: the trait `DataFrameRow` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:7:1
   |
 7 | enum Status {
   | ^^^^^^^^^^^
   = note: struct- and enum-typed variant fields are flattened by default into prefixed columns; the inner type must implement `DataFrameRow` for this to work
help: the trait `DataFrameRow` is implemented for `Outer`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
note: required by a bound in `_assert_inner_is_dataframe_row`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ required by this bound in `_assert_inner_is_dataframe_row`
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Status: miniextendr_api::markers::DataFramePayloadFields` is not satisfied
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:15:32
   |
15 |     Tracked { id: i32, status: Status },
   |                                ^^^^^^ unsatisfied trait bound
   |
help: the trait `miniextendr_api::markers::DataFramePayloadFields` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:7:1
   |
 7 | enum Status {
   | ^^^^^^^^^^^
help: the trait `miniextendr_api::markers::DataFramePayloadFields` is implemented for `Outer`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
